--- a/style.scss
+++ b/style.scss
@@ -61,6 +61,10 @@ body {
                         &::placeholder {
                             color: $color-grey;
                         }
+
+                        &:focus::placeholder {
+                            color: transparent;
+                        }
                     }
 
                     p {
