--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body main form .form-content .input-object p {
 }
 body main form button {
   padding: 0.62rem 1rem;
+  cursor: pointer;
   border: 1px solid #adadad;
   border-radius: 5px;
   background-color: #222222;
