--- a/style.scss
+++ b/style.scss
@@ -32,13 +32,16 @@ body {
                     margin-bottom: .5rem;
                 
                     &.error {
-                        animation: horizontal-shaking .3s linear 1 alternate;
-                        
+                                                
                         label, input::placeholder, p { color: $color-error; }
                         input { 
                             border-color: $color-error;
                             box-shadow: -1px -1px 2px inset $color-error;
                         }
+                    }
+
+                    &.shake {
+                        animation: horizontal-shaking .3s linear 1 alternate;
                     }
 
                     label, input {
