--- a/style.scss
+++ b/style.scss
@@ -28,7 +28,7 @@ body {
 
             .form-content {
 
-                .input-object {
+                .input-element {
                     margin-bottom: .5rem;
                 
                     &.error {
