--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   font-size: 16px;
 }
@@ -6,11 +7,10 @@ body {
   height: 100dvh;
   width: 100dvw;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
 }
 body main {
-  height: 100%;
   width: 100%;
   max-width: 640px;
   padding: 1rem;
@@ -68,6 +68,16 @@ body main form button {
 body main form button:hover {
   scale: 1.05;
   box-shadow: -2px -2px 4px #adadad;
+}
+body footer {
+  padding: 1rem;
+}
+body footer ul li {
+  padding: 0.5rem 0 0.5rem 1.5rem;
+}
+body footer ul li::before {
+  content: "⍟";
+  padding-right: 0.5rem;
 }
 
 @keyframes horizontal-shaking {
