--- a/style.scss
+++ b/style.scss
@@ -12,13 +12,13 @@ body {
     width: 100dvw;
 
     display: flex;
-    justify-content: center;
-
+    flex-direction: column;
+    
     font-family: Arial, Helvetica, sans-serif;
 
 
     main {
-        height: 100%;
+        // height: 100%;
         width: 100%;
         max-width: 640px;
         padding: 1rem;
@@ -94,6 +94,20 @@ body {
             }
         }
     }
+
+    footer {
+        padding: 1rem;
+
+        ul li {
+            padding: .5rem 0 .5rem 1.5rem;
+
+            &::before {
+                content: "\235F";
+                padding-right: .5rem; 
+            }
+        }
+    }
+
 }
 
 @keyframes horizontal-shaking {
