--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,34 @@ $color-error: red;
     font-size: 16px;
 }
 
+ul li {
+    transition: all .3s ease-in-out;
+
+    &:hover {
+        background-color: $color-dark;
+        color: $color-light;
+    }
+}
+
+.btn {
+    margin-top: 1rem;
+    display: inline-block;
+    padding: .62rem 1rem;
+    cursor: pointer;
+
+    border: 1px solid $color-grey;
+    border-radius: 5px;
+    background-color: $color-dark;
+    color: $color-light;
+    box-shadow: -1px -1px 2px $color-grey;
+    transition: all .3s ease-in-out;
+
+    &:hover {
+        background-color: $color-light;
+        color: $color-dark;
+    }
+}
+
 body {
     height: 100dvh;
     width: 100dvw;
@@ -18,7 +46,7 @@ body {
 
 
     main {
-        // height: 100%;
+        height: 100%;
         width: 100%;
         max-width: 640px;
         padding: 1rem;
@@ -70,44 +98,39 @@ body {
                     }
 
                     p {
-                        height: 1rem;
+                        height: 2rem;
                         font-size: .8rem;
                     }
                 }
             }
-            
-            button {
-                padding: .62rem 1rem;
-                cursor: pointer;
+        }
 
-                border: 1px solid $color-grey;
-                border-radius: 5px;
-                background-color: $color-dark;
-                color: $color-light;
-                box-shadow: -1px -1px 2px $color-grey;
-                transition: all .3s ease-in-out;
+        div ul {
 
-                &:hover {
-                    scale: 1.05;
-                    box-shadow: -2px -2px 4px $color-grey;
+            li {
+                border: 1px solid rgb(180, 180, 180);
+
+                a {
+                    padding: .5rem 0 .5rem 1.5rem;
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    line-height: 1.25;
+
+                    &::before {
+                        display: flex;
+                        align-items: center;
+                        content: "\235F";
+                        font-size: 1.25rem;
+                        padding-right: .5rem;
+                        height: 100%;
+                    }
                 }
             }
         }
+
     }
-
-    footer {
-        padding: 1rem;
-
-        ul li {
-            padding: .5rem 0 .5rem 1.5rem;
-
-            &::before {
-                content: "\235F";
-                padding-right: .5rem; 
-            }
-        }
-    }
-
 }
 
 @keyframes horizontal-shaking {
